Fixing the Jenkins build. Realigning to JDK 11